# Horus

./: .build2.sha  .gitignore  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TESTS.md  grub.cfg  horus.py  install.sh  linker.ld  linker64.ld  rebuild-and-run.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml
docs/: ARCHITECTURE.md  AUDIT-2026-07.md  BUILDING.md  LIMITATIONS.md  README.md  ROADMAP.md  SYSCALLS.md  cap_algebra.tla  paging_isolation.tla  pull_request_template.md  security_report.md
docs/proposals/: console-server.md
include/: console_proto.h  dirent.h  errno.h  fs_proto.h  malloc.h  posix.h  syscall.h
rust/: Cargo.toml  KANI.md  i686-horus-kernel.json
rust/fuzz/: Cargo.toml  README.md
rust/fuzz/fuzz_targets/: ct_eq.rs  elf_i386_reloc.rs  elf_load_plan.rs  elf_validate_header.rs  elf_x86_64_reloc.rs  signal_handler_addr.rs  validate_page_fault.rs
rust/src/: aead.rs  argon2.rs  audit.rs  auth.rs  blake2b.rs  capability.rs  crypto.rs  lib.rs  memory.rs  ps.rs  rng.rs  sha256.rs
site/: index.html
src/boot/: ap_trampoline.S  entry64.S  multiboot.S
src/include/: kernel.h  kernel_vma.h  syscall_userspace.h  tpm.h
src/kernel/: acpi.c  aslr.c  ata.c  capability.c  crypto.c  gdt.c  idt.c  kaudit.c  kshell.c  kspawn.c  kusers.c  loader.c  lowlevel.S  lowlevel64.S  main.c  minimal_secure_stubs.c  paging.c  pipe.c  ramfs.c  rust_memory_stubs.c  rust_shims.c  scheduler.c  selftest.c  shell.c  smp.c  storage.c  syscall.c  syscall_fs.c  syscall_hw.c  syscall_internal.h  syscall_ipc.c  terminal.c  tpm.c
tests/: README.md  test_capability.c
tools/: build_newlib.sh  coreutils_session.py  gen_module_manifest.sh  mkheadered.c  modules_session.py  run_with_swtpm.sh  session_test.py  smoke_test.sh  smoke_tpm.sh  tamper_module_iso.sh  tpm_expected_pcr.py
userspace/: argtest.c  captest.c  console_server.c  consoletest.c  cowtest.c  crt0.c  elftest.c  elftest.ld  exectest.c  faulter.c  fs_server.c  fsclient.c  grantee.c  hello.c  hello_newlib.c  init.c  ioporttest.c  irqtest.c  malloc.c  mapphystest.c  newlib_glue.c  newlib_glue64.c  notifytest.c  pie.ld  posix.c  preempttest.c  proctest.c  shell.c  sigtarget.c  sigtest.c  sigwaiter.c  tsdtest.c
userspace/man/: basename  cat  dirname  echo  false  head  hier  printf  seq  tail  true  wc
userspace/ports/coreutils/: README.md
userspace/ports/coreutils/port/: alignalloc.h  argmatch.h  argv-iter.h  assure.h  c-ctype.h  cl-strtod.h  config.h  dirname.h  fadvise.h  fcntl--.h  fs-is-local.h  fs.h  full-read.h  full-write.h  gnulib.c  inttostr.h  ioblksize.h  iopoll.h  isapipe.h  physmem.h  port.c  posixver.h  quote.h  quotearg.h  readtokens0.h  safe-read.h  stat-size.h  stat-time.h  system.h  uchar.h  unicodeio.h  xalloc.h  xbinary-io.h  xdectoint.h  xnanosleep.h  xprintf.h  xstrtod.h  xstrtol.h
