[package]
name = "horus_shell"
version = "0.1.0"
edition = "2021"
description = "Security-critical components for the Horus microkernel (no_std staticlib)"

[lib]
# staticlib: linked into the C kernel. rlib: lets the rust/fuzz harness depend on
# the crate as a normal Rust library (the kernel build uses only the staticlib).
crate-type = ["staticlib", "rlib"]
# No doctests: with the rlib crate-type, `cargo test` would otherwise build a
# non-test no_std rlib under the harness's forced panic=unwind, which cannot link.
doctest = false

[features]
# Built by rust/fuzz only: turns the crate into an rlib dependency of a std
# libFuzzer harness. Gates off the #[panic_handler] (std provides one there) so
# the two do not collide. Off for the kernel build and the gating `rust` job.
fuzzing = []

[lints.rust]
# `#[cfg(kani)]` gates the formal-verification harnesses in capability.rs. Kani
# sets this cfg; every other build (kernel, cargo test, clippy -D warnings) does
# not, so declare it as known or the unexpected_cfgs lint would fail the gating
# `rust` job. The harnesses compile to nothing outside `cargo kani`.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
